# advent-of-code-2024

./: README.md  pyproject.toml
src/advent_of_code/: day_1.py  day_2.py  day_3.py  day_5.py
